@@ -25,6 +25,11 @@
     Reported by: ruediger dot kupper add gmail dot com
     Fixed by: Bas van der Vlies
 
+  * Attachments on Windows are not save due the fact that  os.pathconf is not supported. Set
+    filename max length to 240 chars on windows, closes #300
+    Reported by: Anonymous
+    Fixed by: Bas van der Vlies
+
 2.5.0 
   * BLOG improvements by Thomas Moschny, closes #287,#235,#175:
    - Tries to use the 'Date:' email header to set the date of the blog
